--- a/src/pages/AdminDetailsPage/AdminDetailsPage.scss
+++ b/src/pages/AdminDetailsPage/AdminDetailsPage.scss
@@ -50,19 +50,23 @@
         font-weight: bold;
       }
 
-      textarea {
+      textarea,
+      input[type="number"] {
         width: 100%;
-        min-height: 100px;
         padding: 10px;
         font-size: 14px;
         border: 1px solid #ccc;
         border-radius: 4px;
-        resize: vertical;
+        margin-bottom: 15px;
+      }
+
+      input[type="number"] {
+        max-width: 200px;
       }
     }
 
     button {
-      margin: 0.5rem;
+      margin: 0.5rem 0.5rem 0.5rem 0;
       padding: 10px 20px;
       background-color: #007BFF;
       color: white;
